--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 ul.ddmenu {
    margin: 0px;               /* メニューバー外側の余白(ゼロ) */
    padding: 0px 0px 0px 15px; /* メニューバー内側の余白(左に15px) */
-   background-color: #cc0000; /* バーの背景色(濃い赤色) */
+   background-image: linear-gradient(90deg, #ff0000, #ffdfdf);
 }
 ul.ddmenu li {
-   width: 125px;          /* メニュー項目の横幅(125px) */
+   width: 160px;          /* メニュー項目の横幅(125px) */
    display: inline-block; /* ★横並びに配置する */
    list-style-type: none; /* ★リストの先頭記号を消す */
    position: relative;    /* ★サブメニュー表示の基準位置にする */
 }
 ul.ddmenu a {
-   background-color: #cc0000; /* メニュー項目の背景色(濃い赤色) */
+   background-image: linear-gradient(90deg, #ffc996, #ff9e00);
    color: white;              /* メニュー項目の文字色(白色) */
-   line-height: 40px;         /* メニュー項目のリンクの高さ(40px) */
+   line-height: 50px;         /* メニュー項目のリンクの高さ(40px) */
    text-align: center;        /* メインメニューの文字列の配置(中央寄せ) */
    text-decoration: none;     /* メニュー項目の装飾(下線を消す) */
    font-weight: bold;         /* 太字にする */
    display: block;            /* ★項目内全域をリンク可能にする */
 }
 ul.ddmenu a:hover {
-   background-color: #ffdddd; /* メニュー項目にマウスが載ったときの背景色(淡いピンク) */
-   color: #dd0000;            /* メニュー項目にマウスが載ったときの文字色(濃い赤色) */
+   background-image: linear-gradient(90deg, #a4ff86, #29ff00);
+   color: #ffffff;            /* メニュー項目にマウスが載ったときの文字色(濃い赤色) */
 }
 ul.ddmenu ul {
    margin: 0px;        /* ★サブメニュー外側の余白(ゼロ) */
@@ -29,18 +29,18 @@ ul.ddmenu ul {
    position: absolute; /* ★絶対配置にする */
 }
 ul.ddmenu ul li {
-   width: 135px;               /* サブメニュー1項目の横幅(135px) */
+   width: 160px;               /* サブメニュー1項目の横幅(135px) */
    border-top: 1px solid pink; /* 項目上側の枠線(ピンク色で1pxの実線) */
 }
 ul.ddmenu ul li a {
-   line-height: 35px;   /* サブメニュー1項目の高さ(35px) */
+   line-height: 50px;   /* サブメニュー1項目の高さ(35px) */
    text-align: left;    /* 文字列の配置(左寄せ) */
    padding-left: 5px;   /* 文字列前方の余白(5px) */
    font-weight: normal; /* 太字にはしない */
 }
 ul.ddmenu ul li a:hover {
-   background-color: #ffff80; /* サブメニュー項目にマウスが載ったときの背景色(淡い黄色) */
-   color: #005500;            /* サブメニュー項目にマウスが載ったときの文字色(濃い緑色) */
+   background-image: linear-gradient(90deg, #96b1ff, #005bff);
+   color: #ffffff;            /* サブメニュー項目にマウスが載ったときの文字色(濃い緑色) */
 }
 ul.ddmenu ul ul {
    margin: 0px;        /* ★サブメニュー外側の余白(ゼロ) */
@@ -50,4 +50,28 @@ ul.ddmenu ul ul {
    top: -1px;          /* 1pxだけ上方向にずらす(※上に1pxの枠線を引いている場合) */
    left: 100%;         /* ★基準位置からの距離を親ボックスの幅100％にする */
    border-left: 1px solid pink; /* 左側に引く枠線(ピンク色で1pxの実線) */
+}
+/* ▼外枠▼ */
+div.notedesign {
+   border: 2px solid green;   /* 外枠 */
+   padding: 10px;             /* 内側の余白 */
+   background-color: #ffffcc; /* 背景色 */
+}
+/* ▼ノート内部▼ */
+div.notedesign p {
+   background-image: url("./img/greendot.gif"); /* 罫線 */
+   line-height: 25px; /* 行の高さ */
+   margin: 0px;       /* 外側の余白 */
+}
+/* ▼ノートタイトル▼ */
+div.notedesign p.notetitle {
+   margin: 0px 0px 5px 0px;           /* 外側の余白 */
+   padding: 3px 0px;                  /* 内側の余白 */
+   border-bottom: 3px double #008000; /* 下線 */
+   font-weight: bold;                 /* 文字の太さ */
+   color: #008000;                    /* 文字色 */
+}
+/* ▼ノートタイトルの日付欄▼ */
+div.notedesign p.notetitle span.date {
+   float: right;
 }
